--- a/Mango.Web/appsettings.json
+++ b/Mango.Web/appsettings.json
@@ -8,6 +8,7 @@
   "AllowedHosts": "*",
   "ServiceUrls": {
     "ProductAPI": "https://localhost:7096",
-    "IdentityAPI": "https://localhost:7029"
+    "IdentityAPI": "https://localhost:7029",
+    "ShoppingCartAPI": "https://localhost:7184"
   }
 }
