added coupon service

--- a/Mango.Web/appsettings.json
+++ b/Mango.Web/appsettings.json
@@ -9,6 +9,7 @@
   "ServiceUrls": {
     "ProductAPI": "https://localhost:7096",
     "IdentityAPI": "https://localhost:7029",
-    "ShoppingCartAPI": "https://localhost:7184"
+    "ShoppingCartAPI": "https://localhost:7184",
+    "CouponAPI": "https://localhost:7049"
   }
 }
