--- a/Mango.Services.ShoppingCartAPI/appsettings.json
+++ b/Mango.Services.ShoppingCartAPI/appsettings.json
@@ -8,6 +8,8 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Server=ALLISON-PC\\SQLEXPRESS;Database=MangoShoppingCartAPI;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True;"
-
+  },
+  "ServiceUrls": {
+    "CouponAPI": "https://localhost:7049"
   }
 }
