added email sending feature

--- a/Mango.Services.Email/appsettings.json
+++ b/Mango.Services.Email/appsettings.json
@@ -9,7 +9,22 @@
   "ConnectionStrings": {
     "DefaultConnection": "Server=ALLISON-PC\\SQLEXPRESS;Database=MangoEmailAPI;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True;"
   },
-  "ServiceBusConnectionString": "Endpoint=sb://fizzyrestaurant.servicebus.windows.net/;SharedAccessKeyName=RootManageSharedAccessKey;SharedAccessKey=FsOvtzILB7OGf5IqQ4cI0+X0NsR7YsXOj+ASbOuba40=",  
-  "SubscriptionName": "emailSubscription",  
-  "OrderUpdatePaymentResultTopic": "orderupdatepaymentresulttopic"
+  "MailSettings": {
+    "Mail": "fisayoadegun@gmail.com",
+    "DisplayName": "Fisayo Adegun",
+    "Password": "*********",
+    "Host": "smtp.gmail.com",
+    "Port": 587
+  },
+  //"MailSettings": {
+  //  "Mail": "fisayo.adegun@gmt-limited.com",
+  //  "DisplayName": "Fisayo Adegun",
+  //  "Password": "********",
+  //  "Host": "smtp.office365.com",
+  //  "Port": 587
+  //},
+  "ServiceBusConnectionString": "Endpoint=sb://fizzyrestaurant.servicebus.windows.net/;SharedAccessKeyName=RootManageSharedAccessKey;SharedAccessKey=FsOvtzILB7OGf5IqQ4cI0+X0NsR7YsXOj+ASbOuba40=",
+  "SubscriptionName": "emailSubscription",
+  "OrderUpdatePaymentResultTopic": "orderupdatepaymentresulttopic",
+  "OrderEmailProcessTopic": "orderEmailProcessTopic"
 }
