--- a/Mango.Services.OrderAPI/appsettings.json
+++ b/Mango.Services.OrderAPI/appsettings.json
@@ -14,6 +14,7 @@
   "CheckoutMessageTopic": "checkoutqueue",
   "SubscriptionCheckout": "fizzyOrderSubscription",
   "OrderPaymentProcessTopic": "orderpaymentprocesstopic",
-  "OrderUpdatePaymentResultTopic": "orderupdatepaymentresulttopic"
+  "OrderUpdatePaymentResultTopic": "orderupdatepaymentresulttopic",
+  "OrderEmailProcessTopic": "orderEmailProcessTopic"
 
 }
