--- a/Mango.Services.PaymentAPI/Mango.Services.PaymentAPI.csproj
+++ b/Mango.Services.PaymentAPI/Mango.Services.PaymentAPI.csproj
@@ -7,6 +7,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="RabbitMQSender\pt5dpkvl.vbc~" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="RabbitMQ.Client" Version="6.5.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
   </ItemGroup>
 
